<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/alert_box_bg"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <LinearLayout
            android:id="@+id/btn_cross"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_gravity="end"
            android:gravity="center"
            android:background="@drawable/ripple_effect"
            android:layout_marginEnd="@dimen/_20sdp">
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/cross_icon"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/img_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-15dp"
            android:background="@drawable/group_627" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_right"
            android:fontFamily="@font/fredoka_one"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/successful"
            android:textColor="#000000"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/tv_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/your_account_has_been_created_successfully"
            android:textColor="#000000"
            android:textSize="@dimen/_13sdp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:cardElevation="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:layout_below="@id/tv_change"
            app:cardBackgroundColor="#008C2C">
            <LinearLayout
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple_effect">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/fredoka_one"
                    android:gravity="center"
                    android:text="@string/ok"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>