<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/authbackground">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".fragment.authfragment.SignupFragment">
            <LinearLayout
                android:id="@+id/btn_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/ripple_effect"
                android:layout_marginEnd="@dimen/_10sdp"
                tools:ignore="MissingConstraints">
                <TextView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_23sdp"
                    android:text="@string/skip"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:layout_margin="@dimen/_5sdp"
                    android:textSize="@dimen/_12sdp"
                    android:background="@drawable/skip_bg"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/lay_logo"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_100sdp"
                android:background="@drawable/authlogo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_skip"
                tools:ignore="MissingConstraints" />
            <TextView
                android:id="@+id/tv_signin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fredoka_one"
                android:gravity="center"
                android:text="S I G N    U P"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lay_logo" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@+id/tv_signin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_10sdp"
                tools:ignore="MissingConstraints"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_margin="@dimen/_10sdp"
                    app:cardElevation="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_15sdp"
                    app:cardBackgroundColor="@color/white">
                    <EditText
                        android:id="@+id/ed_fullname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="@dimen/_15sdp"
                        android:hint="@string/full_name"
                        android:background="@null"
                        android:textSize="@dimen/_13sdp"
                        android:singleLine="true"
                        android:textColor="#333333"
                        android:drawableStart="@drawable/user_icon"
                        android:drawablePadding="@dimen/_5sdp"
                        android:textColorHint="#333333"
                        tools:ignore="RtlSymmetry" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_margin="@dimen/_10sdp"
                    app:cardElevation="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_15sdp"
                    app:cardBackgroundColor="@color/white">
                    <EditText
                        android:id="@+id/ed_signup_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="@dimen/_15sdp"
                        android:hint="@string/enter_your_email"
                        android:background="@null"
                        android:textSize="@dimen/_13sdp"
                        android:singleLine="true"
                        android:textColor="#333333"
                        android:drawableStart="@drawable/email"
                        android:drawablePadding="@dimen/_5sdp"
                        android:textColorHint="#333333"
                        tools:ignore="RtlSymmetry" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_margin="@dimen/_10sdp"
                    app:cardElevation="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_15sdp"
                    app:cardBackgroundColor="@color/white">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:weightSum="1"
                        android:orientation="horizontal">
                        <EditText
                            android:id="@+id/ed_pass_su"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingStart="@dimen/_15sdp"
                            android:hint="@string/create_password"
                            android:layout_weight="0.8"
                            android:inputType="textPassword"
                            android:drawableStart="@drawable/password_lock_img"
                            android:drawablePadding="@dimen/_5sdp"
                            android:textSize="@dimen/_13sdp"
                            android:textColor="#333333"
                            android:singleLine="true"
                            android:textColorHint="#333333"
                            android:background="@null" />
                        <LinearLayout
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:gravity="center">
                            <LinearLayout
                                android:id="@+id/btn_hide"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/ripple_effect_ovel">
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/_5sdp"
                                    android:background="@drawable/hide_icon"/>
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/btn_show"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:visibility="gone"
                                android:background="@drawable/ripple_effect_ovel">
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/_5sdp"
                                    android:background="@drawable/show_icon"/>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center|start"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="@dimen/_1sdp">

                    <ImageView
                        android:id="@+id/check_uncheck"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:background="@drawable/unclick"
                        android:layout_marginStart="@dimen/_5sdp"/>
                    <ImageView
                        android:id="@+id/check_check"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:background="@drawable/checked"
                        android:visibility="gone"
                        android:layout_marginStart="@dimen/_5sdp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_9sdp"
                        android:textColor="#FFFFFF"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/by_signing_up_you_agree_to_our"/>

                    <LinearLayout
                        android:id="@+id/btn_tac"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ripple_effect"
                        android:layout_margin="@dimen/_2sdp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_9sdp"
                            android:fontFamily="@font/poppins_medium"
                            android:textColor="#52BE60"
                            android:layout_marginStart="@dimen/_2sdp"
                            android:text="@string/terms_amp_conditions"/>
                    </LinearLayout>

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_margin="@dimen/_10sdp"
                    app:cardElevation="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_20sdp"
                    app:cardBackgroundColor="#008C2C">
                    <LinearLayout
                        android:id="@+id/btn_signup"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ripple_effect">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/fredoka_one"
                            android:gravity="center"
                            android:text="@string/sign_up"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_15sdp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_25sdp"
                    android:background="@drawable/img_or"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_25sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="600"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/sign_up_using"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <LinearLayout
                    android:id="@+id/btn_gmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/ripple_effect_ovel"
                    android:layout_gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_gravity="center"
                        android:background="@drawable/gmail_icon"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/have_an_account"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sdp" />
                    <LinearLayout
                        android:id="@+id/btn_signin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ripple_effect">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/sign_in_text"
                            android:textColor="#52BE60"
                            android:textSize="@dimen/_15sdp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

