<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/authbackground">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".fragment.authfragment.SignupFragment">

            <ImageView
                android:id="@+id/lay_logo"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_100sdp"
                android:background="@drawable/authlogo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_forget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fredoka_one"
                android:gravity="center"
                android:text="@string/forgot_password_text"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintEnd_toEndOf="@id/lay_logo"
                app:layout_constraintStart_toStartOf="@id/lay_logo"
                app:layout_constraintTop_toBottomOf="@id/lay_logo" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_forget"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                tools:ignore="MissingConstraints"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_margin="@dimen/_10sdp"
                    app:cardElevation="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_15sdp"
                    app:cardBackgroundColor="@color/white">
                    <EditText
                        android:id="@+id/ed_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="@dimen/_15sdp"
                        android:hint="@string/enter_your_registered_email"
                        android:background="@null"
                        android:textSize="@dimen/_13sdp"
                        android:singleLine="true"
                        android:textColor="#333333"
                        android:drawableStart="@drawable/email"
                        android:drawablePadding="@dimen/_5sdp"
                        android:textColorHint="#333333"
                        tools:ignore="RtlSymmetry" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_margin="@dimen/_10sdp"
                    app:cardElevation="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_20sdp"
                    app:cardBackgroundColor="#008C2C">
                    <LinearLayout
                        android:id="@+id/btn_submit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ripple_effect">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/fredoka_one"
                            android:gravity="center"
                            android:text="@string/submit"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_15sdp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_forgot_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:elevation="@dimen/_20sdp"
                android:visibility="gone" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

